[gd_scene load_steps=10 format=3 uid="uid://br7baqjad1uqs"]

[ext_resource type="Shader" uid="uid://50mfupysrbx" path="res://scripts/resources/shaders/scroll_bg.gdshader" id="1_0f6co"]
[ext_resource type="Script" uid="uid://b1ys764m32riw" path="res://scripts/main_menu.gd" id="1_6m68e"]
[ext_resource type="Texture2D" uid="uid://bl1jfcgwmq1gy" path="res://assets/art/SF2.png" id="2_gbcjx"]
[ext_resource type="Texture2D" uid="uid://c1tqddh4vim67" path="res://icon.png" id="2_w5d6q"]
[ext_resource type="Texture2D" uid="uid://b2hqcph1g8chg" path="res://assets/art/icon_16x.png" id="4_w5d6q"]
[ext_resource type="PackedScene" uid="uid://rtgngkwjs74d" path="res://scenes/stages/pop_up.tscn" id="6_5etxn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w5d6q"]
shader = ExtResource("1_0f6co")
shader_parameter/scroll_speed = 0.08
shader_parameter/angle_degrees = 45.0
shader_parameter/repeat_x = 20.0
shader_parameter/repeat_y = 12.0
shader_parameter/row_offset = 1.0
shader_parameter/gradient_speed = 0.08
shader_parameter/texture_to_scroll = ExtResource("2_w5d6q")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6m68e"]
shader = ExtResource("1_0f6co")
shader_parameter/scroll_speed = 0.08
shader_parameter/angle_degrees = 45.0
shader_parameter/repeat_x = 20.0
shader_parameter/repeat_y = 12.0
shader_parameter/row_offset = 1.0
shader_parameter/gradient_speed = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6m68e"]
bg_color = Color(0, 0, 0, 0.768627)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_right = 10.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6m68e")

[node name="PanelContainer" type="PanelContainer" parent="."]
material = SubResource("ShaderMaterial_w5d6q")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
material = SubResource("ShaderMaterial_6m68e")
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Menus" type="Control" parent="PanelContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Menus"]
layout_mode = 2
offset_right = 600.0
offset_bottom = 320.0

[node name="Title" type="TextureRect" parent="PanelContainer/MarginContainer/Menus/VBoxContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("2_gbcjx")
expand_mode = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/Menus/VBoxContainer"]
visible = false
layout_mode = 2

[node name="PlaySingle" type="Button" parent="PanelContainer/MarginContainer/Menus/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Play Single"
icon = ExtResource("4_w5d6q")

[node name="PlayCOOP" type="Button" parent="PanelContainer/MarginContainer/Menus/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/disabled = SubResource("StyleBoxFlat_6m68e")
disabled = true
text = "Play PVP"
icon = ExtResource("4_w5d6q")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PopUp" parent="PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_5etxn")]
layout_mode = 2

[node name="Continue" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue To Game"
icon = ExtResource("4_w5d6q")
expand_icon = true

[connection signal="pressed" from="PanelContainer/MarginContainer/Menus/VBoxContainer/PlaySingle" to="." method="_on_play_single_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Menus/VBoxContainer/PlayCOOP" to="." method="_on_play_coop_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
